Bug 209684 - The size of rating stars should not change in inline editing
Summary: The size of rating stars should not change in inline editing
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist/Playlist Layout Editor (other bugs)
Version First Reported In: 2.6-git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-06 23:48 UTC by Sergei Andreev
Modified: 2013-01-13 14:34 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
small stars in edit mode (4.81 KB, image/png)
2009-10-06 23:48 UTC, Sergei Andreev
Details
Screenshot with rating stars (20.41 KB, image/png)
2010-11-20 11:58 UTC, Sergei Andreev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergei Andreev 2009-10-06 23:48:57 UTC
Created attachment 37412 [details]
small stars in edit mode

Do not change the size of rating stars when performing inline edition.
I want to rate some track in playlist with 4,5 stars.
I want to move mouse cursor to the middle of the fifth star, then click to enter edit mode and after a second click again whithout moving cursor.

Currently I have to correct cursor position after entering inline edit mode.  

With current git and Oxygen style rating stars became even smaller then usual.
Comment 1 Neil Skrypuch 2009-12-04 06:04:02 UTC
I agree here, I don't like that you have to enter edit mode first before you can rate (makes rating require 3 clicks plus waiting instead of just a single click with no waiting). However, it adds insult to injury that the stars change size after you enter edit mode. I have larger regular stars, but the clickable stars are still pretty much the same size as you see in the screenshot.
Comment 2 Myriam Schweingruber 2009-12-04 10:13:46 UTC
(In reply to comment #1)
> However, it adds insult to injury that the stars change
> size after you enter edit mode. 

Sorry, but could you maybe stay objective and polite in your comments? Your choice of words is not exactly kind with the developers who spend their free time to do unpaid work for your pleasure.
Comment 3 Neil Skrypuch 2009-12-04 23:38:03 UTC
(In reply to comment #2)
> (In reply to comment #1)
> > However, it adds insult to injury that the stars change
> > size after you enter edit mode. 
> 
> Sorry, but could you maybe stay objective and polite in your comments? Your
> choice of words is not exactly kind with the developers who spend their free
> time to do unpaid work for your pleasure.

I was just exaggerating to help illustrate the point. Obviously there was no actual insult or injury involved. Apologies if you took it that way.
Comment 4 Tim 2010-05-04 18:37:12 UTC
agreed. Playlist, does not save star ratings, entered into the playlist. 

You either have to do it in the context panel, or by right clicking to edit the file directly. 

It seems that it is meant to do this by design, as you can click how many stars you want, it just doesn't stick.
Comment 5 disabled account 2010-05-23 21:03:27 UTC
With Amarok 2.3, you can rate tracks with one click, thus the star size doesnt change anymore :)
Comment 6 Tristan Miller 2010-09-16 12:06:59 UTC
I'm using Amarok 2.3.1 (amarok-2.3.1.60svn20100912) and the star size still changes.  Should this bug be reopened?
Comment 7 Myriam Schweingruber 2010-09-16 12:41:59 UTC
Reopening based on comment #6
Comment 8 Neil Skrypuch 2010-11-18 02:51:27 UTC
*** This bug has been confirmed by popular vote. ***
Comment 9 Sergei Andreev 2010-11-20 11:57:29 UTC
Confirming, stars size is still changing
Comment 10 Sergei Andreev 2010-11-20 11:58:20 UTC
Created attachment 53575 [details]
Screenshot with rating stars
Comment 11 Sergei Andreev 2010-11-20 11:59:10 UTC
Amarok
Version 2.3.2
Using KDE 4.5.3 (KDE 4.5.3)
Comment 12 Lukas 2011-02-17 11:31:36 UTC
Depending on the size you choose for the rating column, the stars might actually stay the same size. But they still move. But to get that the column has to be made quite big, which takes too much space. And moving stars are not much better than resizing stars.

I want to change rating in the play list with just one click (or two for half stars).

This is with Amarok 2.4.0
Comment 13 Ralf Engels 2011-02-20 17:58:16 UTC
This is not a wish, it's a bug.
The layout should pretty much stay the same, but it doesn't in a single-line layout as seen in the attachment.

(Lukas, sorry, no one-click rating for you. That would prevent users from dragging around tracks. However you can one-click-rate the song in the context view)
Comment 14 Sergei Andreev 2011-08-07 16:05:22 UTC
Situation even worse now:

http://i.imgur.com/X7mpL.png

Amarok 2.4.1 KDE 4.7.00 (4.7.0) Kubuntu 11.04, widget style - Oxygen
Comment 15 JoeD 2012-02-05 15:01:31 UTC
@Ralf. I don't get the problem with one-click ratings.
Could you please explain what you mean by "dragging around tracks"?

Rating songs other than the current playing is really hard at the moment.
Comment 16 Ralf Engels 2012-02-06 09:58:54 UTC
Now that I think about it, 
drag-and-drop could still work

One click on the star could rate it.
Pressing the button, holding it and moving the track to a new position would move it inside the playlist.

So yes, seems like one-click-rating could be possible after all.
Comment 17 Wyatt Epp 2012-08-22 13:06:01 UTC
It's completely natural that someone would want to rate a song _after_ listening to it, so single-click rating in the playlist is a definite UX improvement.  Going to line-editing mode takes time and makes multiple ratings super cumbersome, but the only alternative currecntly is making conscious effort to rate things before the song ends (or restarting it, messing up stats for people who use that).
Comment 18 Ralf Engels 2013-01-12 22:42:27 UTC
Git commit d22e7a088f69edbfa2c61362802552c85e4c6035 by Ralf Engels.
Committed on 12/01/2013 at 22:16.
Pushed by rengels into branch 'master'.

Fix The size of rating stars should not change in inline editing

Improved a lot of size issues. You need to pull a lot of tricks out
of your bag to get the widgets to have exactly the same layout.
Still it seems that I am missing a pixel or so somewhere.

Changing the ratings directly with one click is another issue that
I don't want to tackle right now.
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +83   -47   src/playlist/view/listview/InlineEditorWidget.cpp
M  +3    -2    src/playlist/view/listview/InlineEditorWidget.h
M  +82   -85   src/playlist/view/listview/PrettyItemDelegate.cpp

http://commits.kde.org/amarok/d22e7a088f69edbfa2c61362802552c85e4c6035
Comment 19 Wyatt Epp 2013-01-12 23:02:21 UTC
(In reply to comment #18)
> Changing the ratings directly with one click is another issue that
> I don't want to tackle right now.
> FIXED-IN: 2.7

Thank you, Ralf.  Has another bug been opened for single-click rating or should one of us take care of that?
Comment 20 Ralf Engels 2013-01-13 11:04:36 UTC
Hi Wyatt,
I haven't opened another bug/wish. Please do so if you like.

The problem with the single click rating is that it's kind of tricky to do. That's why I haven't done it right away.
Comment 21 Wyatt Epp 2013-01-13 14:34:25 UTC
All right, it's up at bug #313183 for people who are interested in following it.  Thanks again, Ralf.